# teensy-x86-sd-stubs

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ubuntu-x86.yml
cmake/: teensy_x86_sd_stubs.cmake.in
src/: CMakeLists.txt  File.cpp  InMemoryFile.cpp  LinuxFile.cpp  SD.cpp  SD.h
src/utility/: FatStructs.h  Sd2Card.cpp  Sd2Card.h  Sd2PinMap.h  SdFat.h  SdFatUtil.h  SdFile.cpp  SdInfo.h  SdVolume.cpp
test/: CMakeLists.txt  TESTING.md  default_test_fixture.h  test_file_lifecycle.cpp  test_file_truncate.cpp  test_inmemory.cpp  test_linuxfile_read_eof.cpp  test_linuxfile_truncate.cpp  test_linuxfile_write_size.cpp  test_opennextfile.cpp  test_paths_with_spaces.cpp  test_sdclass_init.cpp  test_write.cpp
